examples/invalid/ns/memory/hello_task_glm_instance_payload_invalid.ns
mod cpu Main {
  async fn render(shader: Instance<SurfaceShader>) {
    return;
  }

  fn main() -> i64 {
    return 1;
  }
}
